# pushgen

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: lint_and_test.yaml  test_and_doc.yaml
benches/: README.md  chain_take_filter_map.rs  chain_take_filter_transform.rs  dedup_filter.rs  dedup_flatten_filter_map.rs  filter_map.rs  filter_transform.rs  filter_zip.rs  flatten_dedup_filter_map.rs  for_each_chain_take_filter_map.rs  for_each_dedup_filter.rs  for_each_dedup_flatten_filter_map.rs  for_each_filter_map.rs  for_each_flatten_dedup_filter_map.rs  for_each_map_filter_step_by.rs  for_each_step_by.rs  for_each_transrangers_test6.rs  iter_next_basic_loop.rs  iter_next_chain_take_filter_map.rs  iter_next_dedup_filter.rs  iter_next_dedup_flatten_filter_map.rs  iter_next_filter_map.rs  iter_next_flatten_dedup_filter_map.rs  iter_next_transrangers_test6.rs  iter_reduce.rs  map_dedup.rs  pushgen_chain_take_filter_map.rs  pushgen_dedup_filter.rs  pushgen_dedup_flatten_filter_map.rs  pushgen_filter_map.rs  pushgen_flatten_dedup_filter_map.rs  pushgen_iter_basic_loop.rs  pushgen_iter_chain_take_filter_map.rs  pushgen_map_filter_step_by.rs  pushgen_reduce.rs  pushgen_step_by.rs  pushgen_transrangers_test6.rs  take_filter_map.rs  take_filter_transform.rs  transrangers_test6.rs  (+7 more)
examples/: filter_map.rs  filter_transform.rs  hello.rs
pushgen/: all.html  enum.Either.html  enum.GeneratorResult.html  enum.TryReduction.html  enum.ValueResult.html  fn.from_fn.html  fn.from_iter.html  index.html  sidebar-items.js  struct.BoxedGenerator.html  struct.SliceGenerator.html  trait.DynGenerator.html  trait.FromGenerator.html  trait.Generator.html  trait.GeneratorExt.html  trait.IntoGenerator.html  trait.ReverseGenerator.html
pushgen/dyn_generator/: trait.DynGenerator.html
pushgen/generator_ext/: trait.GeneratorExt.html
pushgen/generators/: fn.from_fn.html  fn.from_iter.html  index.html  sidebar-items.js  struct.ArrayGenerator.html  struct.BoxedGenerator.html  struct.FromFn.html  struct.FromIter.html  struct.OptionGen.html  struct.SliceGenerator.html
pushgen/into_gen/: trait.IntoGenerator.html
pushgen/result/: enum.GeneratorResult.html  enum.TryReduction.html  enum.ValueResult.html
pushgen/structs/: index.html  sidebar-items.js  struct.Chain.html  struct.Cloned.html  struct.Copied.html  struct.Cycle.html  struct.Dedup.html  struct.Enumerate.html  struct.Filter.html  struct.FilterMap.html  struct.Flatten.html  struct.FromFn.html  struct.FromIter.html  struct.Inspect.html  struct.IteratorAdaptor.html  struct.Map.html  struct.OptionGen.html  struct.Reverse.html  struct.Scan.html  struct.Skip.html  struct.SkipWhile.html  struct.StepBy.html  struct.Take.html  struct.TakeWhile.html  struct.Zip.html
pushgen/test/: index.html  sidebar-items.js  struct.MultiStoppingGen.html  struct.StoppingGen.html
pushgen/traits/: index.html  sidebar-items.js  trait.DynGenerator.html  trait.FromGenerator.html  trait.Generator.html  trait.GeneratorExt.html  trait.IntoGenerator.html  trait.Product.html  trait.ReverseGenerator.html  trait.Sum.html
src/: begin_end.rs  combine.rs  dyn_generator.rs  generator_ext.rs  into_gen.rs  lib.rs  result.rs  stage.rs  stage_ext.rs  test.rs  transform.rs
src/generator/: generator_ext.rs  mod.rs
src/generators/: array_gen.rs  boxed.rs  from_iter.rs  mod.rs  option.rs  slice_generator.rs
src/pushgen/: dyn_generator.rs.html  generator_ext.rs.html  into_gen.rs.html  lib.rs.html  result.rs.html  test.rs.html
src/structs/: begin_end_collect.rs  boxed.rs  chain.rs  cloned.rs  copied.rs  (+23 more)
(+121 files in other folders)
