[package]
name = "pushgen"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "filter_map"
harness = false

[[bench]]
name = "take_filter_map"
harness = false

[[bench]]
name = "chain_take_filter_map"
harness = false

[[bench]]
name = "zip"
harness = false

[[bench]]
name = "filter_zip"
harness = false