[package]
name = "pushgen"
version = "0.0.1"
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/AndWass/pushgen"
authors = ["andwass"]

homepage = "https://github.com/AndWass/pushgen"
description = "Push-style design pattern for processing of ranges and data-streams."
keywords = ["push", "generator", "stream"]
documentation = "https://docs.rs/pushgen"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"
itertools = "0.10.1"

[[bench]]
name = "iter_next_filter_map"
harness = false

[[bench]]
name = "for_each_filter_map"
harness = false

[[bench]]
name = "try_for_each_filter_map"
harness = false

[[bench]]
name = "pushgen_filter_map"
harness = false

[[bench]]
name = "iter_next_chain_take_filter_map"
harness = false

[[bench]]
name = "for_each_chain_take_filter_map"
harness = false

[[bench]]
name = "try_for_each_chain_take_filter_map"
harness = false

[[bench]]
name = "pushgen_chain_take_filter_map"
harness = false

[[bench]]
name = "pushgen_iter_chain_take_filter_map"
harness = false

[[bench]]
name = "for_each_dedup_filter"
harness = false

[[bench]]
name = "iter_next_dedup_filter"
harness = false

[[bench]]
name = "try_for_each_dedup_filter"
harness = false

[[bench]]
name = "pushgen_dedup_filter"
harness = false

[[bench]]
name = "for_each_flatten_dedup_filter_map"
harness = false

[[bench]]
name = "iter_next_flatten_dedup_filter_map"
harness = false

[[bench]]
name = "try_for_each_flatten_dedup_filter_map"
harness = false

[[bench]]
name = "pushgen_flatten_dedup_filter_map"
harness = false

[[bench]]
name = "for_each_dedup_flatten_filter_map"
harness = false

[[bench]]
name = "try_for_each_dedup_flatten_filter_map"
harness = false

[[bench]]
name = "iter_next_dedup_flatten_filter_map"
harness = false

[[bench]]
name = "pushgen_dedup_flatten_filter_map"
harness = false

[[bench]]
name = "for_each_transrangers_test6"
harness = false

[[bench]]
name = "try_for_each_transrangers_test6"
harness = false

[[bench]]
name = "iter_next_transrangers_test6"
harness = false

[[bench]]
name = "pushgen_transrangers_test6"
harness = false

[[bench]]
name = "iter_next_basic_loop"
harness = false

[[bench]]
name = "pushgen_iter_basic_loop"
harness = false